# trabalho-02-hebertvictor

./: .gitignore  Dockerfile  HarmonicalVortex.cabal  LICENSE  Makefile  README.md  docker-compose.yml
data/: README.md
data/sl/: ex1.sl  ex2.sl  ex3.sl  ex4.sl  ex5.sl  ex6.sl  ex7.sl  ex8.sl  io-def.sl  misc_tests.sl  simple-1.sl  simple-2.sl
data/sl/sa/: ep1.sl  ep10.sl  ep2.sl  ep3.sl  ep4.sl  ep5.sl  ep6.sl  ep7.sl  ep8.sl  ep9.sl  rp1.sl
relatorio/: Makefile  main.tex  setup.tex
relatorio/sections/: architecture.tex  conclusion.tex  introduction.tex  methodology.tex  results.tex
src/: Main.hs
src/Backend/WASM/: Codegen.hs  PrettyWAT.hs  WAT_Codegen.hs
src/Frontend/: Error.hs  IR.hs  Lexer.x  Parser.y  Pretty.hs  PrettyTree.hs  README.md  Semantics.hs  Token.hs  Value.hs
src/Interpreter/: Interpreter.hs
tests/: InterpreterTests.hs  LexerTests.hs  ParserTests.hs  PrettyTests.hs  SemanticTests.hs  Tests.hs
tests/data/expected/: ex1.ir  ex1.tokens  ex2.ir  ex2.tokens  ex3.ir  ex3.tokens  ex4.ir  ex4.tokens  ex5.ir  ex5.tokens  ex6.ir  ex6.tokens
